--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.1",
+    "dotenv": "^16.3.1",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5"
